# cutile-python

./: .pre-commit-config.yaml  README.md  pyproject.toml
cext/: tile_kernel.cpp
changelog.d/: experimental-autotuner.md
docs/source/: conf.py  data.rst  execution.rst  memory_model.rst  references.rst
experimental/: pyproject.toml
experimental/src/cuda/tile_experimental/: __init__.py  _autotuner.py
samples/: AttentionFMHA.py  LayerNorm.py
samples/templates/: AttentionFMHA.py
samples/utils/: autotuner.py
src/cuda/tile/: __init__.py  _cext.pyi  _compile.py  _context.py  _exception.py  _stub.py
src/cuda/tile/_ir/: ops.py  ops_utils.py
test/: bench_layer_norm.py  bench_rms_norm.py  test_atomic.py  test_autotuner.py  test_bytecode.py  test_code_motion.py  test_unary_elementwise.py  util.py
test/kernels/: layer_norm.py
test/tools/: inline_samples.py
