# SPDX-FileCopyrightText: Copyright (c) <2025> NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
]

[project]
name = "cuda-tile"
dynamic = ["version"]
description = "CUDA Tile Compiler"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" }
]
license = { text = "Proprietary" }
requires-python = ">=3.10"

dependencies = [
  "typing-extensions",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-benchmark",
]

[project.urls]
Homepage = "https://github.com/nvidia/cutile-python"
Repository = "https://github.com/nvidia/cutile-python"

[tool.setuptools.dynamic]
version = {file = "src/cuda/tile/VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "cuda.tile",
    "cuda.tile._ir",
    "cuda.tile._passes",
    "cuda.tile._bytecode",
]

[tool.setuptools.package-data]
"cuda.tile" = ["VERSION"]

[tool.pytest_env]
CUDA_TILE_COMPILER_TIMEOUT_SEC = "60"
